Add nosql vuln, fix BOPLA vuln
